# nuturtlebot

./: CMakeLists.txt  README.md  control  package.xml
cmake/: raspi-toolchain.cmake
cross_compile/: Dockerfile  catkin_arm  catkin_arm_isolated  dependencies.txt
docker/: Dockerfile  arm  build  dependencies.txt  mount_image  raspi-toolchain.cmake
raspi_image/: Dockerfile  create_image.sh  download_raspi_image.sh  expand_raspi_image.sh  extract_partitions.sh  prepare-image.docker
raspi_image/cleanup/: 01-cleanup_ubuntu.sh  Dockerfile
raspi_image/opencr/: Dockerfile
raspi_image/prepare/: 03-resize_mount.sh  04-build_base.sh  Dockerfile
raspi_image/raspi/: Dockerfile
raspi_image/ros2/: Dockerfile
raspi_image/turtlebot/: Dockerfile
scripts/: arduino-cli.yaml  build_firmware  catkin_make_raspi  create_image  docker_build  docker_xcompile  make_debian  write_image
scripts/config_root/etc/ssh/: sshd_config
scripts/config_root/etc/systemd/system/: onetime_init.service
scripts/create_scripts/: cleanup_ubuntu  setup_msr  setup_nuturtlebot  setup_ros  setup_turtle  user_setup
