<?xml version="1.0"?>
<package format="2">
  <name>nuturtlebot</name>
  <version>0.0.1</version>
  <description>
      Helper package for ME495 Navigation.

      Contains messages and other code for a turtlebot3 that runs custom control firmware.
      The firmware is intentionally minimal so that students need to handle lower level calculations.
  </description>

  <maintainer email="elwin@northwestern.edu">Matthew Elwin</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <depend>turtlebot3_msgs</depend>
  <exec_depend>nuturtlebot_msgs</exec_depend>
</package>
